# svc13

./: .gitignore  CMakeLists.txt  svc_version.sh
include/: CMakeLists.txt  klee.h  symbiotic.h
lib/: CMakeLists.txt  lib.c
patches/: 0001-add-ERRORs-where-missing.patch  0002-initialize-BLAST_NONDET.patch
scripts/: CMakeLists.txt  build-fix.sh  instrument.sh  path_to_ml.pl  process_set.sh  runme
src/: CMakeLists.txt  Prepare.cpp
